@startuml
skinparam rankdir TB
skinparam nodesep 20
skinparam ranksep 30
skinparam packageStyle rectangle

package "שכבת הממשק (UI Layer)" {
    class VerticalLayout <<Layout>> #LightBlue
    class AppLayout <<Layout>> #LightBlue

    ' הגדרת העמודות הנסתרות כדי למנוע רוחב
    package "UI"{
        class LoginView
        class AdminDashboardView
        class UserDashboardView
        class AlgorithmRunnerView
        class CreateOrderView
        class HomeView
        class SavedRoutsView
        class RegisterView
        class UserDetailsView
        class MyOrdersView
        class AdminManagmentView
        class GoogleMapView
    }

    'layouts
    package "Navbars" {
        class MainLayout
        class GuestLayout
    }

    ' ירושה מה-Layout (זה מה שגורם להם להופיע מתחתיו)
    UI -up-|> VerticalLayout
    Navbars -right-|> AppLayout


    AlgorithmRunnerView --> GoogleMapView

    ' יצירת מבנה של עמודות בעזרת קשרים שקופים
    LoginView -[hidden]down- CreateOrderView
    CreateOrderView -[hidden]down- SavedRoutsView
    SavedRoutsView -[hidden]down- UserDetailsView

    AdminDashboardView -[hidden]down- HomeView
    HomeView -[hidden]down- RegisterView
    RegisterView -[hidden]down- MyOrdersView

    UserDashboardView -[hidden]down- AlgorithmRunnerView
    AlgorithmRunnerView -[hidden]down- AdminManagmentView
}

@enduml